--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#e0e0e0</color>
+    <color name="colorPrimaryDark">#9e9e9e</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="highly_light_text">#787878</color>
+
+    <color name="light_text">#616161</color>
+
+    <color name="little_light_text">#404040</color>
 </resources>
